<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello"> </string>
    <string name="app_name">Where is Io</string>
    <string name="delete_label">Reset Cache</string>
    <string name="delete_shortcut">D</string>
    <string name="close_label">Close</string>
    <string name="jovian_spiral_title">Jovian Spiral</string>
    <string name="riseset_title">Rise and Set times</string>
    <string name="jupiter_text">Jovian Waterfall</string>
    <string name="time_text">Rise and Set Times</string>
    <string name="about_label">About...</string>
    <string name="about_shortcut">A</string>
    <string name="about_title">About Where is Io - version 2.2</string>
    <string name="about_text">Where is Io is tool for showing the positions of objects in the Solar System.
It uses your location to determine the rise and set times of the planets
(and soon the moon) as well as the position of the 4 large moons of Jupiter.
\n\n
On the front page you\'ll see the Diarama which provides a quick overview of 
what bodies are currently in the sky.  Nothing here is to scale, but it does 
give you an idea of what\'s visible.  This is beta code, and probably won\'t work
in the arctic and antarctic circles, where things don\'t set.
\n\n
The Rise and Set Times page gives you computed rise and set times for today at your
position.
\n\n
The Jupiter Moon Positions page gives you a spiral view of Jupiter\'s large moons
over time.  Even through only 8x binoculars you can make out these
4 moons on nights when Jupiter is up.\n\n
The portrait view shows a 4 day window of time, with the orange line 
representing the current state.  In landscape view, you get a close up on
the first portion of the graph (total time will vary based on the aspect
ratio of your device).  Jupiter\'s size is slightly exaggerated (2x) for aesthetics.\n
This is a work in progress, expect to see additional functions rolled out
over time.\n\n
<b>License / Copyright</b>\n\n
Copyright (c) 2010 Sean Dague\n\n
Where is Io is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\n
Where is Io is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
General Public License for more details.\n\n
You should have received a copy of the GNU General Public License
along with Where is Io.  If not, see http://www.gnu.org/licenses/.\n\n
Full source code available at http://github.com/sdague/where-is-io\n\n
This software includes simulation code derived from Johannes
Gajdosik\'s vsop87, elp82b, and l1 model implementations.  Much thanks
to his excellent work in porting Fortran models to C and making those
available for general use.\n\n
Copyright (c) 2006 Johannes Gajdosik\n\n
Permission is hereby granted, free of charge, to any person obtaining a
copy of this software and associated documentation files (the \"Software\"),
to deal in the Software without restriction, including without limitation
the rights to use, copy, modify, merge, publish, distribute, sublicense,
and/or sell copies of the Software, and to permit persons to whom the
Software is furnished to do so, subject to the following conditions:\n
The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.
    </string>
    <string name="jupiter_details">\
<b>Radius:</b> 11.209 Earths\n\
<b>Mass:</b> 317.8 Earths\n\
<b>Gravity:</b> 2.528 g\n
\n\
Jupiter is the 5th planet from the Sun, and the largest in our solar system.
The 4 largest moons of Jupiter were discovered by Galileo Galilei in 1610, 
and are hence named the Galilean Satellites.\n
\n\
The Galilean satellites can be seen with a typical set of 8 power field binoculars.
They will show up in a distinct line of points on either side of the clearly round
Jupiter.
\n\
Learn more at: http://en.wikipedia.org/wiki/Jupiter
</string>
<string name="io_details">\
<b>Radius:</b> 0.286 Earths\n\
<b>Mass:</b> 0.015 Earths\n\
<b>Gravity:</b> 0.183 g\n\
\n\
Io is the inner most moon of Jupiter.  It is also the most geologically
active object in the entire Solar system due to the gravitational flexing
from Jupiter and the other Galilean Satellites.  Io has volcanos that produce
plumes of sulfur up to 500 km (310 mi) above the surface.  This is higher
than the orbit of the International Space Station.\n
\n\
Learn more at: http://en.wikipedia.org/wiki/Io_%28moon%29
</string>
<string name="europa_details">\
<b>Radius:</b> 0.245 Earths\n\
<b>Mass:</b> 0.008 Earths\n\
<b>Gravity:</b> 0.134 g\n
\n\
Europa is the second closest moon of Jupiter.  It\'s claim to fame is being
one of the smoothest objects in the solar system, with very few craters.  The
surface of Europa is made of solid water ice, and some models suggest a deep
liquid water ocean beneath the surface.  Such an ocean may be the most likely
place for non terrestrial life in the Solar System.
\n\
Learn more at: http://en.wikipedia.org/wiki/Europa_%28moon%29
</string>
<string name="ganymede_details">\
<b>Radius:</b> 0.413 Earths\n\
<b>Mass:</b> 0.025 Earths\n\
<b>Gravity:</b> 0.146 g\n
\n\
Ganymede is the third Galliean satellite, and the 7th moon of Jupiter.  It is
the largest satellite of any planet in our Solar System.  Ganymede is known to
have both a salt water ocean, and is the only moon in the Solar System to have
generate it\'s own magnetic field.\n
\n\
Learn more at: http://en.wikipedia.org/wiki/Ganymede_%28moon%29
</string>
<string name="callisto_details">\
<b>Radius:</b> 0.378 Earths\n\
<b>Mass:</b> 0.018 Earths\n\
<b>Gravity:</b> 0.126 g\n
\n\
Callisto is the outer most of the Galliean satellites.  While smaller than Ganymede
it is still nearly the size of the planet Mercury.  Like our moon, Callisto is tidally
locked to it\'s planet, so the same side always faces Jupiter.  Because of Callisto\'s 
distance from Jupiter it has relatively low radiation levels compared to the inner moons,
and thus would be a reasonable candidate for a manned base to explore the Jupiter
system.\n
\n\
Learn more at: http://en.wikipedia.org/wiki/Callisto_%28moon%29
</string>
<string name="moon_system_2d">Telescope view</string>
<string name="saturn_text">Saturnian Waterfall</string>
<string name="jovian_2d_title">Jovian 2D view</string>
</resources>
