<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
	android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
 
	<net.dague.astro.views.Diarama android:id="@+id/diarama"
				android:layout_width="match_parent" android:layout_height="150dp"
				android:layout_margin="5dp"
				android:src="@drawable/sun_icon"
				/>

			<Button android:id="@+id/time_button"
				style="@style/AstroButton"
				android:text="@string/time_text"
				android:layout_width="match_parent"
				></Button>

			<LinearLayout
			    android:id="@+id/LinearLayout02"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		
				<Button android:id="@+id/jupiter_button"
					style="@style/AstroButton"
					android:text="@string/jupiter_text"
					android:layout_width="wrap_content"
					>
				</Button>
	
				<Button android:id="@+id/jupiter_2D_button"
					style="@style/AstroButton"
					android:text="@string/moon_system_2d"
					android:layout_width="wrap_content"
					>
				</Button>
				
			</LinearLayout>						

			<LinearLayout
			    android:id="@+id/LinearLayout03"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		
				<Button android:id="@+id/saturn_button"
					style="@style/AstroButton"
					android:text="@string/saturn_text"
					android:layout_width="wrap_content"
					>
				</Button>
	
				<Button android:id="@+id/saturn_2D_button"
					style="@style/AstroButton"
					android:text="@string/moon_system_2d"
					android:layout_width="wrap_content"
					>
				</Button>
				
			</LinearLayout>				
						
			<Button android:id="@+id/about_button"
				style="@style/AstroButton"
				android:layout_width="match_parent" 
				android:text="@string/about_label"
				>
				</Button>


</LinearLayout>
